<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/ig_logo"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="15%"
        android:layout_height="128dp"
        android:layout_width="128dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_input_layout"
        app:layout_widthPercent="90%"
        app:layout_marginTopPercent="45%"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username_hint"
            android:backgroundTint="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_layout"
        app:layout_widthPercent="90%"
        app:layout_marginTopPercent="55%"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <com.dx.dxloadingbutton.lib.LoadingButton
        android:id="@+id/login_button"
        android:enabled="false"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        app:layout_widthPercent="90%"
        app:layout_marginTopPercent="68%"
        app:lb_btnColor="@color/colorAccent"
        app:lb_textColor="@color/colorPrimary"
        app:lb_resetAfterFailed="true"
        app:lb_btnRippleColor="#000000"
        app:lb_btnText="@string/login_btn"/>

</android.support.percent.PercentRelativeLayout>